logs/dag_id=user_processing/run_id=manual__2024-12-27T01:51:26.349470+00:00/task_id=store_user/attempt=1.log
[2024-12-27T01:51:37.779+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: user_processing.store_user manual__2024-12-27T01:51:26.349470+00:00 [queued]>
[2024-12-27T01:51:37.783+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: user_processing.store_user manual__2024-12-27T01:51:26.349470+00:00 [queued]>
[2024-12-27T01:51:37.783+0000] {taskinstance.py:1362} INFO - 
--------------------------------------------------------------------------------
[2024-12-27T01:51:37.783+0000] {taskinstance.py:1363} INFO - Starting attempt 1 of 1
[2024-12-27T01:51:37.784+0000] {taskinstance.py:1364} INFO - 
--------------------------------------------------------------------------------
[2024-12-27T01:51:37.789+0000] {taskinstance.py:1383} INFO - Executing <Task(PythonOperator): store_user> on 2024-12-27 01:51:26.349470+00:00
[2024-12-27T01:51:37.791+0000] {standard_task_runner.py:55} INFO - Started process 7655 to run task
[2024-12-27T01:51:37.794+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'user_processing', 'store_user', 'manual__2024-12-27T01:51:26.349470+00:00', '--job-id', '22', '--raw', '--subdir', 'DAGS_FOLDER/user_processing.py', '--cfg-path', '/tmp/tmp16lgkm8c']
[2024-12-27T01:51:37.795+0000] {standard_task_runner.py:83} INFO - Job 22: Subtask store_user
[2024-12-27T01:51:37.820+0000] {task_command.py:376} INFO - Running <TaskInstance: user_processing.store_user manual__2024-12-27T01:51:26.349470+00:00 [running]> on host f750dc751645
[2024-12-27T01:51:37.848+0000] {taskinstance.py:1592} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=user_processing
AIRFLOW_CTX_TASK_ID=store_user
AIRFLOW_CTX_EXECUTION_DATE=2024-12-27T01:51:26.349470+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2024-12-27T01:51:26.349470+00:00
[2024-12-27T01:51:37.849+0000] {postgres.py:129} INFO - Running copy expert: COPY users from stdin with delimeter as ',', filename: /tmp/processed_user.csv
[2024-12-27T01:51:37.852+0000] {base.py:71} INFO - Using connection ID 'postgres' for task execution.
[2024-12-27T01:51:37.854+0000] {taskinstance.py:1851} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 175, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 193, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/user_processing.py", line 30, in _store_user
    filename = '/tmp/processed_user.csv',
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/hooks/postgres.py", line 137, in copy_expert
    cur.copy_expert(sql, file)
psycopg2.errors.SyntaxError: syntax error at or near "delimeter"
LINE 1: COPY users from stdin with delimeter as ','
                                   ^

[2024-12-27T01:51:37.857+0000] {taskinstance.py:1406} INFO - Marking task as FAILED. dag_id=user_processing, task_id=store_user, execution_date=20241227T015126, start_date=20241227T015137, end_date=20241227T015137
[2024-12-27T01:51:37.862+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 22 for task store_user (syntax error at or near "delimeter"
LINE 1: COPY users from stdin with delimeter as ','
                                   ^
; 7655)
[2024-12-27T01:51:37.897+0000] {local_task_job.py:164} INFO - Task exited with return code 1
[2024-12-27T01:51:37.907+0000] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
